samples/_failures_safe/1761669069_9cbbf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58075159.c: In function ‘main’:
./samples/SAFE/__tmp_58075159.c:144:30: error: missing terminating " character
  144 |     add_log_entry(&analyzer, "202
      |                              ^~~~
./samples/SAFE/__tmp_58075159.c:144:5: error: expected expression at end of input
  144 |     add_log_entry(&analyzer, "202
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_58075159.c:144:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_58075159.c:53:5: note: declared here
   53 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_58075159.c:144:5: error: expected declaration or statement at end of input
  144 |     add_log_entry(&analyzer, "202
      |     ^~~~~~~~~~~~~
